Added bidswitchIdSystem module

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -18,7 +18,8 @@
     "quantcastIdSystem",
     "idxIdSystem",
     "fabrickIdSystem",
-    "verizonMediaIdSystem"
+    "verizonMediaIdSystem",
+    "bidswitchIdSystem"
   ],
   "adpod": [
     "freeWheelAdserverVideo",
